モデルのトレーニング完了、評価指標と特徴量重要度の出力を追加

--- a/Todo.txt
+++ b/Todo.txt
@@ -12,13 +12,72 @@
 - 温度センサーデータ (`sens_temp_{zone}`)
 - 空調機の運転状態データ (`AC_valid_{zone}`[オンオフ], `AC_mode_{zone}`[冷房か暖房か])
 - 空調設定値 (`AC_set_{zone}`)
-- 電力消費量データ : `L`, `M`, `R`：各系統の電力値
     'L_ZONES': [0, 1, 6, 7],  # L系統のゾーン
     'M_ZONES': [2, 3, 8, 9],  # M系統のゾーン
     'R_ZONES': [4, 5, 10, 11],  # R系統のゾーン
 - 外気温データ (`outdoor_temp`)
 - 日射量データ (`solar_radiation`)
 など
+
+## 指定特徴量
+⸻
+
+特徴量に関する整理・方針
+
+✅ 採用する特徴量（未来データも可）
+	•	外気温（atmospheric temperature）
+		未来データも使用可能（※精度が上がるならOK）
+	•	日射量（total solar radiation）
+		未来データも使用可能
+	•	空調サーモ状態（Thermo状態）
+		AC_set_{zone} + サーモON/OFFの組み合わせ
+	•	空調運転状態（発停）
+		AC_valid_{zone}：空調のON/OFF状態
+	•	空調モード
+		AC_mode_{zone}：冷房 / 暖房
+
+⸻
+
+🟨 使用を控える・削除対象の特徴量
+
+特徴量	理由
+sens_temp_{zone}（未来）	目的変数と同一なので未来データNG
+sens_humid_{zone}（未来）	同上、未来NG
+AC_temp_{zone}	機器温度は削除した方が良い（未来NG）
+L, M, R	電力系統の消費量は使用しない
+day_of_week	効果が薄いため、使用しなくてもよい
+is_weekend	同上
+
+
+⸻
+
+🧮 多項式特徴量（2次までの交互作用）
+
+以下の変数を用いて自動生成（例: poly_27, poly_235 など）：
+	•	現在のセンサー温度（未来を含まない）
+	•	空調設定温度（ただしサーモ状態と統合推奨）
+	•	サーモの状態（未来含む）
+	•	空調の発停（未来含む）
+	•	空調モード（未来含む）
+	•	外気温（未来含む）
+	•	日射量（未来含む）
+	•	各ゾーンの対応するLMR（削除予定だが、過去値など検討余地あり）
+
+⸻
+
+⏰ 時間特徴量
+
+特徴量	ステータス
+hour	使用推奨
+
+⸻
+
+📈 その他アドバイス
+	•	目的変数が15分先なら、説明変数も15分先にシフトすること
+	•	温度・湿度にノイズ（スパイク）があるため、移動平均をかけると良い
+	•	データリークを避けるため、「未来を含まない」ように移動平均を設計する
+
+⸻
 
 ## モデル
 1. **ベースモデル**: LightGBM
